# features/chat/data/model.go
@@ -1,0 +1,9 @@
+package data
+
+import "gorm.io/gorm"
+
+type Chat struct {
+	*gorm.Model
+	ID                  uint `gorm:"primaryKey;column:id;autoIncrement;not null;type:varchar(255)"`
+	PickupTransactionID uint `gorm:"column:pickup_transaction_id;not null;type:varchar(255)"`
+}
